<resources>
    <string name="app_name">Androzic</string>
    <string name="managetracks_name">Tracks</string>
    <string name="trackproperties_name">Edit track</string>
    <string name="loadtrack_name">Load track from file</string>
    <string name="savetrack_name">Save track to file</string>
    <string name="track2route_name">Convert track to route</string>
    <string name="exporttrack_name">Export track</string>
    <string name="loadwaypoints_name">Open waypoint set</string>
    <string name="managewaypoints_name">Waypoints</string>
    <string name="waypointproperties_name">Edit waypoint</string>
    <string name="waypointproject_name">Project new waypoint</string>
    <string name="manageroutes_name">Routes</string>
    <string name="selectroute_name">Select route</string>
    <string name="loadroute_name">Load route from file</string>
    <string name="saveroute_name">Save route to file</string>
    <string name="routeproperties_name">Edit route</string>
    <string name="routedetails_name">Route details</string>
    <string name="routestart_name">Select direction</string>
    <string name="markericon_name">Select marker icon</string>
    <string name="pref_name">Androzic settings</string>
    <string name="hsi_name">HSI</string>
    <string name="information_name">Information</string>
    <string name="mapinformation_name">Map information</string>
    <string name="coordinates_name">New coordinates</string>
    <string name="maplist_name">Maps</string>
    <string name="search_name">Search results</string>
    <string name="widget_name">Androzic Location</string>
    <string name="search_hint">Enter address or name</string>
    <string name="version" formatted="false">Version: %s (build %d)</string>
    <string name="homepage">Homepage</string>
    <string name="faq">F.A.Q.</string>
    <string name="feedback">Feedback and support</string>
    <string name="about"><b>Navigation client that uses old OziExplorer ozf2 maps</b>. Great for hiking, geocaching, off-roading, sailing, boating and other outdoor activities. You are expected to be aware of OziExplorer or at least of where to get its maps. Maps can also be created by yourself, but with some effort, see FAQ for details. Can work without maps as a simple navigator. Works with a number of online maps such as Open Street Map (Internet connection required). Works with SAS.Planet maps cache.</string>
    <string name="donations">Donations</string>
    <string name="donate">If you like this application you can donate for the further development using one of the following methods:</string>
    <string name="donate_google">Donate via Google Play Store</string>
	<string name="donate_paypal">Donate via PayPal</string>
	<string name="communities">Communities</string>
	<string name="googleplus">Google+</string>
	<string name="facebook">Facebook</string>
	<string name="twitter">Twitter</string>
	<string name="license">License</string>
	<string name="credits">Credits</string>
    <string name="msg_wait">Please wait&#8230;</string>
    <string name="msg_scansdcard">Scanning SD card</string>
    <string name="msg_initializingmaps">Initializing maps&#8230;</string>
    <string name="msg_initializingdata">Initializing data&#8230;</string>
    <string name="msg_initializingplugins">Initializing plugins&#8230;</string>
    <string name="msg_initializingview">Initializing view&#8230;</string>
    <string name="msg_paid">Donated version</string>
    <string name="msg_dedicated">Dedicated to my fair Olya</string>
    <string name="msg_nothing_found">Nothing was found. Please take into account that data is searched only if it is loaded in Androzic, named locations are searched only if Internet connection is available.</string>
    <string name="msg_empty_map_list">No maps available.</string>
    <string name="menu_stopnavigation">Stop navigating</string>
    <string name="menu_navigate">Navigate</string>
	<string name="menu_nextnavpoint">Skip to next</string>
	<string name="menu_prevnavpoint">Go to previous</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_search">Search</string>
	<string name="menu_details">Details</string>
	<string name="menu_share">Share</string>
	<string name="menu_view">View</string>
    <string name="menu_whereami">Where am I?</string>
    <string name="action_add_waypoint">Add waypoint</string>
    <string name="action_follow">Follow</string>
    <string name="action_locating">Locating</string>
	<string name="action_tracking">Tracking</string>
    <string name="pref_plugins_title">Plugins</string>
    <string name="pref_advanced_title">Advanced</string>
	<string name="pref_onlinemapscale_title">Default zoom level</string>
	<string name="pref_onlinemapscale_summary">Zoom level that will be interpreted as 100%</string>
    <string name="pref_loc_title">Location</string>
    <string name="pref_loc_gpstimeout_title">GPS location timeout</string>
    <string name="pref_loc_gpstimeout_summary">Specifies timeout in seconds of last GPS fix after which location will be forgotten</string>
    <string name="pref_folder_title">Folders</string>
    <string name="pref_map_title">Map</string>
    <string name="pref_maprenderinterval_title">Update interval</string>
    <string name="pref_maprenderinterval_summary">Minimum time period between map updates</string>
    <string name="pref_mapbest_title">Load best map</string>
    <string name="pref_mapbest_summary">Lets application try to load best map for current location</string>
    <string name="pref_mapbestinterval_title">Best map interval</string>
    <string name="pref_mapbestinterval_summary">Time period between best map lookups</string>
    <string name="pref_mapadjacent_title">Adjacent maps</string>
    <string name="pref_mapadjacent_summary">Display adjacent maps outside the border of current map (<b>experimental</b>, can significantly degrade performance!)</string>
    <string name="pref_maplistscale_title">Map list scale in meters</string>
    <string name="pref_maplistscale_summary">In map lists show map scale in meters per centimeter instead of conventional centimeters per centimeter.</string>
    <string name="pref_wakelock_title">Keep screen on</string>
	<string name="pref_wakelock_summary">Keeps the device&#8217;s screen turned on and bright when map is displayed</string>
	<string name="pref_hidestatusbar_title">Hide status bar</string>
	<string name="pref_hidestatusbar_summary">Hide Android status bar when map is displayed.</string>
	<string name="pref_mapdim_title">Screen auto dim</string>
    <string name="pref_mapdim_summary">Makes screen automatically dim at night time</string>
    <string name="pref_mapcropborder_title">Crop map margins</string>
    <string name="pref_mapcropborder_summary">Crop map along borer (corner markers)</string>
    <string name="pref_mapdrawborder_title">Draw map border</string>
    <string name="pref_mapdrawborder_summary">Draw border (along corner markers)</string>
    <string name="pref_charset_title">Text file encoding</string>
    <string name="pref_charset_summary">The character set for map and data text files. <b>Caution:</b> you can not mix files in Android native (UTF-8) and national character sets, change this setting only if all your files are in national encoding, otherwise manually recode the files which are not in UTF-8 encoding. Takes affect only after application restart.</string>
    <string name="pref_show_title">Display</string>
	<string name="pref_cursorvector_title">Vector line type</string>
	<string name="pref_cursorvector_summary">Select base for vector line length</string>
	<string name="pref_cursorvectormlpr_title">Vector line multiplier</string>
	<string name="pref_cursorvectormlpr_summary">Select how many vector line bases will be used to set its length</string>
	<string name="pref_showcurrenttrack_title">Show current track</string>
	<string name="pref_showcurrenttrack_summary">Make current track visible on map</string>
	<string name="pref_lookahead_title">Look ahead</string>
	<string name="pref_lookahead_summary">Screen amount to look ahead</string>
	<string name="pref_unit_title">Units</string>
	<string name="pref_grid_usermpp_title">Custom grid limitation</string>
	<string name="pref_grid_usermpp_summary">Maximum meters per pixel scale at which custom grid will be visible</string>
	<string name="pref_tracking_title">Tracks</string>
	<string name="pref_tracking_mintime_title">Minimum time</string>
	<string name="pref_tracking_mintime_summary">Minimum time in milliseconds that should pass before another track point is acquired</string>
	<string name="pref_tracking_mindistance_title">Minimum distance</string>
	<string name="pref_tracking_mindistance_summary">Minimum distance in meters that should go before another track point is acquired</string>
	<string name="pref_tracking_linewidth_title">Line width</string>
	<string name="pref_tracking_linewidth_summary">Pixel width of the track line</string>
	<string name="pref_tracking_currentload_title">Load current track</string>
	<string name="pref_tracking_currentload_summary">Load current track tail at next application start</string>
	<string name="pref_tracking_currentlength_title">Current track length</string>
	<string name="pref_tracking_currentlength_summary">Maximum number of points in current track tail</string>
	<string name="pref_waypoint_title">Waypoints</string>
	<string name="pref_waypoint_visible_title">Ensure visible on create</string>
	<string name="pref_waypoint_visible_summary">Center map on newly created waypoint</string>
	<string name="pref_waypoint_width_title">Marker size</string>
	<string name="pref_waypoint_width_summary">The pixel size of waypoint marker</string>
	<string name="pref_waypoint_showname_title">Show name</string>
	<string name="pref_waypoint_showname_summary">Show waypoint name beside a marker</string>
	<string name="pref_route_title">Routes</string>
	<string name="pref_route_preload_title">Preload routes</string>
	<string name="pref_route_preload_summary">Preload routes from files on application start</string>
	<string name="pref_route_preload_hidden_title">Hide preloaded routes</string>
	<string name="pref_route_preload_hidden_summary">Hide preloaded routes until they are viewed, edited or navigated</string>
	<string name="pref_route_linewidth_title">Line width</string>
	<string name="pref_route_linewidth_summary">Pixel width of the route line</string>
	<string name="pref_route_pointwidth_title">Marker size</string>
	<string name="pref_route_pointwidth_summary">The pixel size of route waypoint marker</string>
	<string name="pref_route_showname_title">Show waypoint name</string>
	<string name="pref_route_showname_summary">Show route waypoint name beside a marker</string>
	<string name="pref_navigation_title">Navigation</string>
	<string name="pref_navigation_proximity_title">Waypoint proximity</string>
	<string name="pref_navigation_proximity_summary">Proximity in meters at which route navigation will proceed to next available waypoint</string>
	<string name="pref_navigation_traverse_title">Use traverse logic</string>
	<string name="pref_navigation_traverse_summary">Use traverse logic (see help for more details) together with proximity for switching to next route waypoint</string>
	<string name="pref_navigation_loadlast_title">Load last route</string>
	<string name="pref_navigation_loadlast_summary">Load not finished route at next application start</string>
	<string name="pref_navigation_proximitycircle_title">Proximity circle</string>
	<string name="pref_navigation_proximitycircle_summary">Draw proximity circle around route waypoints during navigation</string>
	<string name="pref_navigation_linewidth_title">Bearing line width</string>
	<string name="pref_navigation_linewidth_summary">Width of a bearing line to current navigation waypoint</string>
</resources>